# imageRec

./: .gitignore  CMakeLists.txt  helloworld.cpp
header/: backprojection.h  discreteFourierTransform.h  gateHeaders.h  inverseDiscreteFourierTransform.h  lorCrystalId.h  projectionSum.h  projections.h  reconstruction3d.h
src/: backprojection.cpp  discreteFourierTransform.cpp  inverseDiscreteFourierTransform.cpp  lorCrystalId.cpp  projectionSum.cpp  projections.cpp  reconstruction3d.cpp
src/app/: app.py  canvaviewer.py  databaseViewer.py  fft.py  openFile.py  output.py
